--- a/es/habilidades.html
+++ b/es/habilidades.html
@@ -84,15 +84,14 @@
                     <h2 class="skill-main-category__title"><i class="fas fa-desktop"></i> Frontend</h2>
                     <div class="skill-cards-grid">
                         <article class="skill-card">
-                            <div class="skill-card__logo-wrapper">
-                                <img src="../img/html-5.png" alt="Logo HTML5" class="skill-card__logo">
-                            </div>
-                            <h3 class="skill-card__name">HTML5</h3>
-                            <p class="skill-card__general-desc">Lenguaje de marcado fundamental para la estructura y
-                                semántica del contenido web.</p>
-                            <p class="skill-card__my-experience">Utilizado en todos mis proyectos web para crear
-                                interfaces accesibles y bien estructuradas.</p>
-                        </article>
+    <div class="skill-card__level">Avanzado</div>
+    <div class="skill-card__logo-wrapper">
+        <img src="../img/html-5.png" alt="Logo Java" class="skill-card__logo">
+    </div>
+    <h3 class="skill-card__name">Java</h3>
+    <p class="skill-card__general-desc">Lenguaje de programación robusto, orientado a objetos y ampliamente utilizado en el desarrollo empresarial.</p>
+    <p class="skill-card__my-experience">Base de mi desarrollo backend, utilizado para construir APIs, lógica de negocio y microservicios.</p>
+</article>
                         <article class="skill-card">
                             <div class="skill-card__logo-wrapper">
                                 <img src="../img/logos/css3.svg" alt="Logo CSS3" class="skill-card__logo">
