--- a/es/index.html
+++ b/es/index.html
@@ -73,7 +73,7 @@
                     Hola, soy <span class="hero__title--highlight">Adrián Tomás</span>
                 </h1>
                 <p class="hero__subtitle animate-on-load animate-delay-1" id="heroSubtitle">
-                    Desarrollador Full Stack <span class="hero__subtitle--separator">|</span> Transformando ideas en
+                    Ingeniero Informático con Mención en Ingeniería de Software y Desarrollador Full Stack <span class="hero__subtitle--separator">|</span> Transformando ideas en
                     soluciones, construyendo el futuro con nuevas creaciones.
                 </p>
                 <div class="hero__cta-group animate-on-load animate-delay-2">
